--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
             <div class="banner-images">
                 <div class="image-item">
                     <img src="./Images/7c550720ab20af0840548a832e0f9a28.png" alt="Delicious food 1">
-                    <p>Delicious Food 1</p>
+                    <p style="font-weight: bolder;">Burger</p>
                 </div>
                 <div class="image-item">
                     <img src="./Images/2960bf175397022922e830ec3e1d9301.png" alt="Delicious food 2">
-                    <p>Delicious Food 2</p>
+                    <p>Food combo</p>
                 </div>
                 <div class="image-item">
                     <img src="./Images/4781e98e8fe30f5e079a9a24ac667e6a.png" alt="Delicious food 3">
-                    <p>Delicious Food 3</p>
+                    <p>Pizza</p>
                 </div>
                 <div class="image-item">
                     <img src="./Images/ca2f7832b951d3dd04ad5fcbba7a1a18.png" alt="Delicious food 4">
-                    <p>Delicious Food 4</p>
+                    <p>Cake</p>
                 </div>
             </div>
         </section>
