--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                 </div>
                 <div class="image-item">
                     <img src="./Images/2960bf175397022922e830ec3e1d9301.png" alt="Delicious food 2">
-                    <p>Food combo</p>
+                    <p style="font-weight: bolder;">Food combo</p>
                 </div>
                 <div class="image-item">
                     <img src="./Images/4781e98e8fe30f5e079a9a24ac667e6a.png" alt="Delicious food 3">
-                    <p>Pizza</p>
+                    <p style="font-weight: bolder;">Pizza</p>
                 </div>
                 <div class="image-item">
                     <img src="./Images/ca2f7832b951d3dd04ad5fcbba7a1a18.png" alt="Delicious food 4">
-                    <p>Cake</p>
+                    <p style="font-weight: bolder;">Cake</p>
                 </div>
             </div>
         </section>
